--- a/CS/DXWebApplication1/Views/Shared/_Layout.cshtml
+++ b/CS/DXWebApplication1/Views/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
     new Script { ExtensionSuite = ExtensionSuite.Scheduler },
     new Script { ExtensionSuite = ExtensionSuite.TreeList }
 )
+
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+            integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
